# badwords-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  badwords.csv
src/: lib.rs  main.rs  tests.rs
