# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 David Campbell <dcampbell24@gmail.com>

[package]
name = "badwords-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "An implementation of filtering based on badwords (https://github.com/hughsie/badwords)."
repository = "https://codeberg.org/dcampbell/badwords-rs"
keywords = ["censor"]
# https://crates.io/category_slugs
categories = ["text-processing"]
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md", "bad_words.csv"]

[dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
