# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 David Campbell <dcampbell24@gmail.com>

[package]
name = "badwords-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
license = "MIT AND LGPL-2.1-or-later"
description = "An implementation of filtering based on badwords (https://github.com/hughsie/badwords)."
repository = "https://codeberg.org/dcampbell/badwords-rs"
keywords = ["censor"]
# https://crates.io/category_slugs
categories = ["text-processing"]
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md", "bad_words.csv"]

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
